Fixed incorrect image size on IE
git-svn-id: svn://svn.oblomov.com/Oblomov@3728 63c81c92-1a08-11de-87e6-23293a004a03

--- a/scr/css/BorrowIt.css
+++ b/scr/css/BorrowIt.css
@@ -1,5 +1,8 @@
-.PageContents {
-	text-align: left;
+
+/* Browser compatibility */
+
+.PageContents { /* otherwise all text is centered in IE */
+  text-align: left;
 }
 
 /* Explicitly color links, since older IE doesn't understand inherit */
@@ -14,4 +17,7 @@ a.MenuBarLink {
 }
 a img { /* otherwise IE puts border around images in links */
 	border: none;
+}
+img { /* otherwise IE renders images slightly higher */
+	display: block;
 }
